--- a/src/_includes/seo.html
+++ b/src/_includes/seo.html
@@ -6,3 +6,10 @@
     }}{% endunless %}{% endif %}
 </title>
 <meta name="description" content="{{ seo_description }}" />
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ECEC8YT7XS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-ECEC8YT7XS');
+</script>
