--- a/src/_sass/imports/minimal-mistakes/_forms.scss
+++ b/src/_sass/imports/minimal-mistakes/_forms.scss
@@ -17,7 +17,6 @@ form {
     display: block;
     width: 100%;
     margin-bottom: 5px * 2;
-    *margin-left: -7px;
     padding: 0;
     color: $text-color;
     border: 0;
@@ -45,7 +44,6 @@ button,
 select,
 textarea {
   vertical-align: baseline;
-  *vertical-align: middle;
 }
 
 input,
@@ -102,7 +100,7 @@ input[type="radio"] {
   height: auto;
   padding: 0;
   margin: 3px 0;
-  *margin-top: 0;
+  // *margin-top: 0;
   line-height: normal;
   cursor: pointer;
   border-radius: 0;
@@ -113,8 +111,8 @@ input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box;
   padding: 0;
-  *width: 13px;
-  *height: 13px;
+  width: 13px;
+  height: 13px;
 }
 
 input[type="image"] {
@@ -138,7 +136,7 @@ input[type="submit"] {
   width: auto;
   height: auto;
   cursor: pointer;
-  *overflow: visible;
+  // *overflow: visible;
 }
 
 select,
