doc: more consistent font usage (IBM Plex Sans), load code-playground.min.js, and only when needed

--- a/src/_sass/imports/button.scss
+++ b/src/_sass/imports/button.scss
@@ -14,7 +14,7 @@
   display: inline-block;
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
-  font-family: $sans-serif;
+  font-family: $system-font;
   font-size: $type-size-5;
   font-weight: bold;
   text-align: center;
