--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -150,13 +150,13 @@ body {
 
     dt {
         margin-top: 1em;
-        font-family: $sans-serif;
+        font-family: $body-font;
         font-weight: bold;
     }
 
     dd {
         margin-left: 1em;
-        font-family: $sans-serif;
+        font-family: $body-font;
         font-size: $type-size-5;
     }
 
@@ -266,7 +266,7 @@ body {
 .page__meta {
     margin-top: 2em;
     color: $muted-text-color;
-    font-family: $sans-serif;
+    font-family: $display-font;
     font-size: $type-size-6;
 
     p {
