--- a/src/_sass/imports/minimal-mistakes/_footer.scss
+++ b/src/_sass/imports/minimal-mistakes/_footer.scss
@@ -68,7 +68,7 @@
     display: flex;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-family: $sans-serif-narrow;
+    font-family: $display-font;
     font-size: $type-size-6;
     text-transform: uppercase;
   }
