--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -46,12 +46,12 @@
     h5,
     h6 {
         margin-bottom: 0;
-        font-family: $sans-serif-narrow;
+        font-family: $display-font;
     }
 
     p,
     li {
-        font-family: $sans-serif;
+        font-family: $display-font;
         font-size: $type-size-5;
         line-height: 1;
         // padding: 8px 4px 8px 8px;
