--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -13,26 +13,13 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$system: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
+$system-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI",
   "Helvetica Neue", "Lucida Grande", Arial, sans-serif !default;
-$monospace: 'IBM Plex Mono', Monaco, Consolas, "Lucida Console", monospace !default;
-$sans-serif:  $system !default;
-$serif: Georgia, Times, serif !default;
 
-/* sans serif typefaces */
-$sans-serif-narrow: $sans-serif !default;
-// $helvetica: Helvetica, "Helvetica Neue", Arial, sans-serif !default;
 
-/* serif typefaces */
-// $georgia: Georgia, serif !default;
-// $times: Times, serif !default;
-// $bodoni: "Bodoni MT", serif !default;
-// $calisto: "Calisto MT", serif !default;
-// $garamond: Garamond, serif !default;
-
-$global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
-$caption-font-family: $serif !default;
+$global-font-family: $body-font !default;
+$header-font-family: $display-font !default;
+$caption-font-family: $display-font !default;
 
 /* type scale */
 $type-size-1: 2.441rem !default; // ~39.056px
