doc: layout tweaks on page smaller than the viewport

--- a/src/_layouts/single.html
+++ b/src/_layouts/single.html
@@ -41,7 +41,11 @@ layout: default
         {% endif %}
         {% include page__taxonomy.html %}
         {% if page.date %}<meta itemprop="datePublished" content="{{ page.date | date: "%B %d, %Y" }}">{% endif %}
-        {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%B %d, %Y" }}">{% endif %}
+        {% if page.last_modified_at %}<meta itemprop="dateModified" content="{{ page.last_modified_at | date: "%B %d, %Y" }}">{% endif %}        
+
+        {% if version %}<p><strong><i class="fas fa-fw fa-code-branch" aria-hidden="true"></i>{{ version }} </strong> <span id='version'></span></p>{% endif %}
+
+
         {% if page.last_modified_at %}
           <p class="page__date"><strong><i class="fas fa-fw fa-calendar-alt" aria-hidden="true"></i> {{ site.data.ui-text[site.locale].date_label | default: "Updated" }}</strong> <time datetime="{{ page.last_modified_at | date: "%Y-%m-%d" }}">{{ page.last_modified_at | date: "%B %d, %Y" }}</time></p>
         {% elsif page.date %}
