feat: light grey background page

--- a/src/_sass/imports/minimal-mistakes/_forms.scss
+++ b/src/_sass/imports/minimal-mistakes/_forms.scss
@@ -104,7 +104,7 @@ input[type="radio"] {
   line-height: normal;
   cursor: pointer;
   border-radius: 0;
-  border: 0 \9;
+  border: 0;
 }
 
 input[type="checkbox"],
