--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -134,6 +134,11 @@ $right-sidebar-width-narrow: 200px !default;
 $right-sidebar-width: 300px !default;
 $right-sidebar-width-wide: 300px !default;
 
+$left-sidebar-width-narrow: 200px !default;
+$left-sidebar-width: 300px !default;
+$left-sidebar-width-wide: 300px !default;
+
+
 /*
    Other
    ========================================================================== */
