--- a/src/_sass/imports/minimal-mistakes/_page.scss
+++ b/src/_sass/imports/minimal-mistakes/_page.scss
@@ -22,19 +22,22 @@
 
 body {
     display: flex;
-    min-height: 100vh;
     flex-direction: column;
+    min-height: 100vh;
 }
 
 .initial-content,
 .search-content {
     display: flex;
     flex: 1 0 auto;
+    justify-content: center;
+    background: var(--page-background, #f5f5f7);
 }
 
+/** `.page` is the main content, does not include `.sidebar` */
 .page {
     display: flex;
-    max-width: 760px;
+    max-width: 840px;
     width: 100%;
     margin: 0;
     
@@ -51,9 +54,7 @@ body {
 
     .page__inner-wrap {
         float: left;
-        margin-top: 1em;
-        margin-left: 0;
-        margin-right: 0;
+        margin: 0;
         width: 100%;
         clear: both;
 
@@ -67,10 +68,23 @@ body {
         .page__share {
             position: relative;
             float: left;
-            margin-left: 0;
+            margin-left: 4em;
             margin-right: 0;
+            margin-bottom: 2em;
             width: 100%;
             clear: both;
+        }
+
+        .page__content {
+          background: #fff;
+          border-radius: 8px;
+          padding: 8px;
+          padding-left: 2em;
+          padding-right: 2em;
+          margin-top: 1em;
+          margin-bottom: 1em;
+          margin-left: 1em;
+          margin-right: 1em;
         }
     }
 }
@@ -163,6 +177,14 @@ body {
     blockquote + .small {
         margin-top: -1.5em;
         padding-left: 1.25rem;
+    }
+
+    img.full-width {
+      max-width: 100vw;
+      width: calc(100% + 4em);
+      margin-left: -2em;
+      margin-right: -2em;
+      margin-top: -1em;
     }
 }
 
